--- a/sa_page/templates/voting/solution1.html
+++ b/sa_page/templates/voting/solution1.html
@@ -89,10 +89,10 @@
                 <nav class="main">
                     <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span>
                         <span class="line"></span></a>
-                    <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">功能介紹</span>
+                    <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span>
                             <span class="line"></span></a>
                     <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text"
-                            target="_blank">數據總覽</span> <span class="line"></span></a> 
+                            target="_blank">產品熱度</span> <span class="line"></span></a> 
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text"
                             target="_blank">點讚GO!</span> <span class="line"></span></a>
                 </nav>
@@ -296,8 +296,8 @@
 
                         <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span>
                             <span class="line"></span></a>
-                        <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">功能介紹</span> <span class="line"></span></a>
-                        <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">數據總覽</span> <span class="line"></span></a>
+                        <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
+                        <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">產品熱度</span> <span class="line"></span></a>
                         <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text">點讚GO!</span> <span
                                 class="line"></span></a>
 
