--- a/sa_page/static/scss/functionintro.scss
+++ b/sa_page/static/scss/functionintro.scss
@@ -204,6 +204,11 @@ body.functionintro .wrapper .rightcolumn{
             display: block;
             
         }
+
+       &.greenbg{
+            background: rgb(283,255,255);
+            background: linear-gradient(180deg, rgba(283,255,255,0) 0%, rgba(283,255,255,1) 100%);
+       }
     }
 
     section.funcintro-qa{
@@ -289,12 +294,16 @@ body.functionintro .wrapper .rightcolumn{
                 padding:20px 0px 20px 0px;
                 background-color: #f2f2f2;
                 border-radius:10px;
-                img{
-                    display: block;
-                    width:calc(90% - 40px);
-                    height:auto;
-                    margin: 0px auto 0px auto;
-                }
+                    img{
+                        display: block;
+                        width:calc(90% - 40px);
+                        height:auto;
+                        margin: 0px auto 0px auto;
+                    }
+
+                    &:not(:first-child) {
+                        margin-top:20px;
+                    }
                }
 
             }
