--- a/sa_page/templates/voting.html
+++ b/sa_page/templates/voting.html
@@ -94,8 +94,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <nav class="main">
                     <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                    <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">功能介紹</span> <span class="line"></span></a>
-                    <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">數據總覽</span> <span class="line"></span></a>
+                    <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
+                    <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">產品熱度</span> <span class="line"></span></a>
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
                 </nav>
 
@@ -313,8 +313,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <nav class="footer">
 
                         <a href="/sa/" class="nav-link" data-trigger-page-transition><span class="text">首頁</span> <span class="line"></span></a>
-                        <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">功能介紹</span> <span class="line"></span></a>
-                        <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">數據總覽</span> <span class="line"></span></a>
+                        <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
+                        <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">產品熱度</span> <span class="line"></span></a>
                         <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text">點讚GO!</span> <span class="line"></span></a>
 
                     </nav>
