--- a/sa_page/static/assets/css/pd_data.css
+++ b/sa_page/static/assets/css/pd_data.css
@@ -182,6 +182,7 @@ article {
     border-radius: 8px;
 }
 #section1 {
+    position: relative;
     padding-top:20px;
     height:60px;
 }
@@ -203,6 +204,41 @@ article {
     height: 12px;
     background: #0A192D;
 }
+#section1 img {
+    position: absolute;
+    display:block;
+    top:20px;
+    right:-10px;
+    cursor: pointer;
+}
+#pop_instruction {
+    position: absolute;
+    top:20px;
+    right:-10px;
+    padding:20px;
+    width: 260px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    box-sizing: border-box;
+    visibility: hidden;
+    z-index:2000;
+}
+#pop_instruction h4 {
+    font-size: 16px;
+}
+#pop_instruction ul {
+    padding-left: 12px;
+    font-size: 13px;
+    list-style: disc;
+}
+#section1 #pop_close {
+    display: block;
+    position: absolute;
+    top:6px;
+    right:6px;   
+}
+
 /* section2 */
 #section2 { 
     display: flex;
