--- a/sa_page/templates/community.html
+++ b/sa_page/templates/community.html
@@ -154,11 +154,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <a href="/sa/" class="logo black"></a>
 
                             <a href="/sa/#" class="hidden-button" data-toggle-trial></a>
-                            <h2>功能介紹</h2>
+                            <h2>SA攻略</h2>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="/sa/">首頁</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">功能介紹 - 社區檔案櫃</li>
+                                    <li class="breadcrumb-item active" aria-current="page">SA攻略 - 社區檔案櫃</li>
                                 </ol>
                             </nav>
                         </div>
