--- a/sa_page/static/assets/css/commons.css
+++ b/sa_page/static/assets/css/commons.css
@@ -823,7 +823,7 @@ body.functionintro .wrapper .rightcolumn .funcintro-block img {
   display: block;
 }
 body.functionintro .wrapper .rightcolumn .funcintro-block.greenbg {
-  background-image: url(../img/line-bg.png), linear-gradient(to bottom, rgba(238, 255, 255, 0) 0%, rgb(238, 255, 255) 100%);
+  background-image: url(../img/line-bg1.png), linear-gradient(to bottom, rgba(238, 255, 255, 0) 0%, rgb(238, 255, 255) 100%);
   background-repeat: no-repeat, no-repeat;
   background-position: bottom right, right;
   background-size: cover, 100%;
