--- a/sa_page/static/scss/functionintro.scss
+++ b/sa_page/static/scss/functionintro.scss
@@ -209,13 +209,13 @@ body.functionintro .wrapper .rightcolumn{
             
 
            
-                background-image   : url(../img/line-bg1.png),
+                background-image   : url(../img/line-bg.png),
                                      linear-gradient(to bottom, rgba(238, 255, 255, 0) 0%,  rgba(238, 255, 255, 1) 100%);
               
                 background-repeat  : no-repeat,
                                      no-repeat;
               
-                background-position: bottom right, 
+                background-position: top right, 
                                      right;
                 background-size:cover,100%;
         }
