修貼底圖 改次導航列和麵包屑標題

--- a/sa_page/static/scss/functionintro.scss
+++ b/sa_page/static/scss/functionintro.scss
@@ -219,6 +219,10 @@ body.functionintro .wrapper .rightcolumn{
                                      right;
                 background-size:cover,100%;
         }
+
+        &.nopaddingbottom{
+            padding-bottom:0px;
+        }
        
     }
 
