--- a/sa_page/templates/community.html
+++ b/sa_page/templates/community.html
@@ -144,7 +144,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="submenu">
                 <ol>
                     <li class="namecard"><a href="/sa/functionintro/businesscard/"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
-                    <li class="active community"><a href="#"><div class="menu-item"><span>社區百科1.0</span></div></a></li>
+                    <li class="active community"><a href="#"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
                 </ol>
             </div>
             <div class="rightcolumn">
@@ -173,7 +173,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <h2 class="center">社區檔案櫃上線囉 !</h2>
                                     <div class="scrolldownarrow"></div>
                                 </div>
-                                <div class="funcintro-block greenbg">
+                                <div class="funcintro-block greenbg nopaddingbottom">
                                     <h3 class="center">完整社區資訊握在手心 不擔心被客戶問倒</h3>
                                     <p class="center">拉開檔案櫃抽屜，細戶資料快速給你答案，立刻成為社區通。</p>
                                     <img src="{% static 'assets/img/functionintro/community-intro-1.svg' %}" />
@@ -183,7 +183,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <p class="center">有效資訊整合，讓您把時間與精神花在服務客戶上！</p>
                                     <img src="{% static 'assets/img/functionintro/community-intro-2.svg' %}" />
                                 </div> 
-                                <div class="funcintro-block greenbg">
+                                <div class="funcintro-block greenbg nopaddingbottom">
                                     <h3 class="center">只要你懂社區，社區就會幫你</h3>
                                     <p class="center">主營社區資訊維護得宜 獨家資訊都秀給你！</p>
                                     <img src="{% static 'assets/img/functionintro/community-intro-3.svg' %}" />
