--- a/sa_page/templates/businesscard.html
+++ b/sa_page/templates/businesscard.html
@@ -144,7 +144,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="submenu">
                 <ol>
                     <li class="active namecard"><a href="#"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
-                    <li class="community"><a href="/sa/functionintro/community/"><div class="menu-item"><span>社區百科1.0</span></div></a></li>
+                    <li class="community"><a href="/sa/functionintro/community/"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
                 </ol>
             </div>
             <div class="rightcolumn">
