--- a/sa_page/templates/sellingprocess.html
+++ b/sa_page/templates/sellingprocess.html
@@ -144,8 +144,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="submenu">
                 <ol>
                     <li class="namecard"><a href="/sa/functionintro/businesscard/"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
-                    <li class="active community"><a href="/sa/functionintro/community/"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
-                    <li class="active community"><a href="#"><div class="menu-item"><span>買方服務流程</span></div></a></li>
+                    <li class="community"><a href="/sa/functionintro/community/"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
+                    <li class="active sellingprocess"><a href="#"><div class="menu-item"><span>買方服務流程</span></div></a></li>
                 </ol>
             </div>
             <div class="rightcolumn">
