--- a/sa_page/static/assets/css/commons.css
+++ b/sa_page/static/assets/css/commons.css
@@ -772,6 +772,15 @@ body.functionintro .wrapper .submenu li.community a > div.menu-item:before {
   background-image: url(../img/functionintro/community-grey.svg);
 }
 
+body.functionintro .wrapper .submenu li.sellingprocess.active a > div.menu-item:before,
+body.functionintro .wrapper .submenu li.sellingprocess a:hover > div.menu-item:before {
+  background-image: url(../img/functionintro/sellingprocess.svg);
+}
+
+body.functionintro .wrapper .submenu li.sellingprocess a > div.menu-item:before {
+  background-image: url(../img/functionintro/sellingprocess-grey.svg);
+}
+
 body.functionintro .wrapper .rightcolumn .funcintro-sectitle h1,
 body.functionintro .wrapper .rightcolumn .funcintro-sectitle h2,
 body.functionintro .wrapper .rightcolumn .funcintro-sectitle h3,
@@ -830,7 +839,6 @@ body.functionintro .wrapper .rightcolumn .funcintro-block.greenbg {
 }
 body.functionintro .wrapper .rightcolumn .funcintro-block.nopaddingbottom {
   padding-bottom: 0px;
-  
 }
 body.functionintro .wrapper .rightcolumn section.funcintro-qa {
   width: 100%;
