--- a/sa_page/templates/sellingprocess.html
+++ b/sa_page/templates/sellingprocess.html
@@ -159,7 +159,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="/sa/">首頁</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">SA攻略 - 社區檔案櫃</li>
+                                    <li class="breadcrumb-item active" aria-current="page">SA攻略 - 買方服務流程</li>
                                 </ol>
                             </nav>
                         </div>
@@ -171,23 +171,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="container">
                             <div class="row" >
                                 <div class="funcintro-sectitle">
-                                    <h2 class="center">社區檔案櫃上線囉 !</h2>
+                                    <h2 class="center">買方服務流程上線囉 !</h2>
                                     <div class="scrolldownarrow"></div>
                                 </div>
                                 <div class="funcintro-block greenbg nopaddingbottom">
-                                    <h3 class="center">完整社區資訊握在手心 不擔心被客戶問倒</h3>
-                                    <p class="center">拉開檔案櫃抽屜，細戶資料快速給你答案，立刻成為社區通。</p>
-                                    <img src="{% static 'assets/img/functionintro/community-intro-1.svg' %}" />
+                                    <h3 class="center">360度 秒懂客戶無死角</h3>
+                                    <p class="center">提高專業度，服務不漏氣</p>
+                                    <img src="{% static 'assets/img/functionintro/sellingprocess-intro-1.svg' %}" />
                                 </div>
                                 <div class="funcintro-block greenbg">
-                                    <h3 class="center">五大目錄瀏覽，掌握案源動態不求人</h3>
-                                    <p class="center">有效資訊整合，讓您把時間與精神花在服務客戶上！</p>
-                                    <img src="{% static 'assets/img/functionintro/community-intro-2.svg' %}" />
+                                    <h3 class="center">複數需求卡，配案更靈活</h3>
+                                    <p class="center">單一客戶複數需求卡，配案好閱讀，推薦不混亂</p>
+                                    <img src="{% static 'assets/img/functionintro/sellingprocess-intro-2.svg' %}" />
                                 </div> 
                                 <div class="funcintro-block greenbg nopaddingbottom">
-                                    <h3 class="center">只要你懂社區，社區就會幫你</h3>
-                                    <p class="center">主營社區資訊維護得宜 獨家資訊都秀給你！</p>
-                                    <img src="{% static 'assets/img/functionintro/community-intro-3.svg' %}" />
+                                    <h3 class="center">任務完成紀錄也完成</h3>
+                                    <p class="center">任務完成服務紀錄即完成，服務歷程不漏接</p>
+                                    <img src="{% static 'assets/img/functionintro/sellingprocess-intro-3.svg' %}" />
                                 </div> 
                             </div>
                         </div>
@@ -202,108 +202,114 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <h3 class="center">常見問題集</h3>
                                     <ol>
                                         <li>
-                                            <div class="title">為何要有社區檔案櫃？</div>
+                                            <div class="title">客戶360<span class="subitemtitle">進入客戶360｜對客戶的認識｜客戶歷史｜線上行為</span></div>
                                             <div class="answer">
                                                 <div class="textbox">
-                                                <strong>社區百科</strong>著重<strong>社區資料</strong> / <strong>社區檔案</strong>櫃聚焦<strong>單一細戶資料</strong>。<br>
-                                                便利業務迅速了解細戶的資料與動態，掌握細戶動態無需辛苦備註，只要開啟社區檔案櫃！完整的資訊整合，讓您一眼可視重要資料，不再因為遺漏而遺憾。<br>
-                                                除了提供細戶資料，還針對責任範圍業務提供優於其他業務的第一手訊息。<br>
+                                                    <strong>輔助您環視客戶</strong>，了解客戶樣貌數據、信義足跡、線上行為，提前準備服務腳本。
                                                 </div>
                                                 <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-1.png' %}" alt="為何要有社區檔案櫃？">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-1.png' %}" alt="如何進入客戶360?">
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-1_1.png' %}" alt="對客戶的認識">
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-1_2.png' %}" alt="客戶的歷史">
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-1_3.png' %}" alt="客戶線上行為">
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="title">客戶快找<span class="subitemtitle">如何找｜找自己的｜找全公司的</span></div>
+                                            <div class="answer">
+                                                <div class="textbox">
+                                                    同時查自己與公司的客戶資料，省去來回切換的麻煩。
+                                                   
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-2.png' %}" alt="如何找客戶？">
+                                                   
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-2_1.png' %}" alt="找自己的客戶">
+                                                   
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-2_2.png' %}" alt="找公司的客戶">
+                                                   
                                                 </div>
                                                 
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="title">行情概況</div>
-                                            <div class="answer">
-                                                <div class="textbox">
-                                                    提供<strong>實登資料</strong>與<strong>未實登的信義成交資料</strong>。樓棟戶別最新實價登錄清楚不漏接，歷史成交紀錄一覽無遺。
-                                                   
-                                                </div>
-                                                <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-2.png' %}" alt="行情概況">
-                                                   
-                                                </div>
-                                                <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-2_1.png' %}" alt="行情概況">
-                                                </div>
-                                                <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-2_2.png' %}" alt="行情概況">
-                                                </div>
-                                                <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-2_3.png' %}" alt="行情概況">
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="title">銷售現況</div>
+                                            <div class="title">複數需求卡</div>
                                             
                                             <div class="answer">
                                                 <div class="textbox">
-                                                    系統自動比對，輔助您掌握社區<strong>在售案源動態</strong>，了解案源熱度與比對後的有效數據。
+                                                    針對單一客戶建立<strong>多張需求卡</strong>，客戶管理便利。配案更靈活，推薦不混亂。
                                                     
                                                 </div>
                                                 <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-3.png' %}" alt="銷售現況">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-3.png' %}" alt="複數需求卡">
                                                 </div>
-                                                <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-3_1.png' %}" alt="銷售現況">
-                                                </div>
-                                                <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-3_2.png' %}" alt="銷售現況">
-                                                </div>
-                                                <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-3_3.png' %}" alt="銷售現況">
-                                                </div>
-                                                <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-3_4.png' %}" alt="銷售現況">
-                                                </div>
+                                               
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="title">開發機會</div>
+                                            <div class="title">推薦/帶看<span class="subitemtitle">此客戶所有的｜對單一需求的</span></div>
                                             
                                             <div class="answer">
                                                 <div class="textbox">
-                                                    提醒<strong>案源開發機會</strong>，掌握潛案動態不求人，將許多原本需人工整理的資料，改為系統自動處理，讓業務把時間與精神花在服務客戶上。
-                                                    只要看到檔案櫃出現新標籤，表示機會來嘍！
+                                                    推薦過的案源與看過的案源一目瞭然。
                                                 </div>
                                                 <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-4.png' %}" alt="數位名片1.0總覽-簡介">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-4.png' %}" alt="針對此客戶的所有推薦/帶看">
+                                                 
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-4_1.png' %}" alt="針對單張需求卡的推薦/帶看">
                                                  
                                                 </div>
                                                 
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="title">社區經營 / 當責社區</div>
+                                            <div class="title">帶看任務<span class="subitemtitle">建立任務｜從人脈查看｜從行事曆查看</span></div>
                                             
                                             <div class="answer">
                                                 <div class="textbox">
-                                                    社區經營：<br>
-                                                    展示<strong>信義對於社區的經營成效</strong>，可查閱歷史資料了解細戶脈絡。同時也顯示業務同仁在社區的經營紀錄。<br>
-                                                    <br>
-                                                    當責社區：<br>
-                                                    除了上述資料呈現，此欄位<strong>專為社區維護人提供優於其他業務的細戶資料</strong>。並維護社區資訊及添加細戶標籤，讓系統更能算出對您有利的獨家訊息。
+                                                    <strong>全新的任務體系概念</strong>，幫自己預約與客戶的服務我們稱做任務，除了可以在行事曆上提醒自己，任務若完成服務紀錄也隨之完成！
                                                 </div>
                                                 <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-5.png' %}" alt="數位名片1.0總覽-簡介">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-5.png' %}" alt="建立任務">
+                                                  
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-5_1.png' %}" alt="查看已建立任務 (人脈)">
+                                                  
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-5_2.png' %}" alt="查看已建立任務 (任務首頁)">
+                                                  
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-5_3.png' %}" alt="完成任務">
                                                   
                                                 </div>
                                                 
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="title">物件細節</div>
+                                            <div class="title">建立需求卡</div>
                                             
                                             <div class="answer">
                                                 <div class="textbox">
-                                                    將細戶<strong>物件詳情標籤化</strong>，更便利於查看與篩選細戶，簡化到處查詢的繁瑣。
+                                                    從需求卡開始，服務你的客戶吧！
                                                 </div>
                                                 <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/community-answer-6.png' %}" alt="數位名片1.0總覽-簡介">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-6.png' %}" alt="建立需求卡">
                                                 </div>
                                                 
                                             </div>
