--- a/sa_page/static/scss/functionintro.scss
+++ b/sa_page/static/scss/functionintro.scss
@@ -272,6 +272,18 @@ body.functionintro .wrapper .rightcolumn{
                 font-size:18px;
                 border-bottom:1px solid #efefef;
 
+                span.subitemtitle{
+                    font-size: 14px;
+                    color: #92A2B9;
+                    margin-left: 100px;
+                    font-weight: 400;
+                    position: absolute;
+                    display: block;
+                    /* top: 23px; */
+                    margin-top: -23px;
+              
+                }
+
             }
 
             li .title.open{
