--- a/sa_page/templates/community.html
+++ b/sa_page/templates/community.html
@@ -145,7 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <ol>
                     <li class="namecard"><a href="/sa/functionintro/businesscard/"><div class="menu-item"><span>數位名片1.0</span></div></a></li>
                     <li class="active community"><a href="#"><div class="menu-item"><span>社區檔案櫃</span></div></a></li>
-                    <li class="community"><a href="/sa/functionintro/sellingprocess/"><div class="menu-item"><span>買方服務流程</span></div></a></li>
+                    <li class="sellingprocess"><a href="/sa/functionintro/sellingprocess/"><div class="menu-item"><span>買方服務流程</span></div></a></li>
                 </ol>
             </div>
             <div class="rightcolumn">
