--- a/sa_page/templates/sellingprocess.html
+++ b/sa_page/templates/sellingprocess.html
@@ -244,12 +244,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="title">複數需求卡</div>
+                                            <div class="title">需求卡<span class="subitemtitle">建立需求卡｜複數需求卡</span></div>
                                             
                                             <div class="answer">
                                                 <div class="textbox">
                                                     針對單一客戶建立<strong>多張需求卡</strong>，客戶管理便利。配案更靈活，推薦不混亂。
                                                     
+                                                </div>
+                                                <div class="imagebox">
+                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-6.png' %}" alt="建立需求卡">
                                                 </div>
                                                 <div class="imagebox">
                                                     <img src="{% static 'assets/img/functionintro/sellingprocess-answer-3.png' %}" alt="複數需求卡">
@@ -258,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             </div>
                                         </li>
                                         <li>
-                                            <div class="title">推薦/帶看<span class="subitemtitle">此客戶所有的｜對單一需求的</span></div>
+                                            <div class="title">推薦/帶看<span class="subitemtitle">所有的紀錄｜單一需求的紀錄</span></div>
                                             
                                             <div class="answer">
                                                 <div class="textbox">
@@ -301,19 +304,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="title">建立需求卡</div>
-                                            
-                                            <div class="answer">
-                                                <div class="textbox">
-                                                    從需求卡開始，服務你的客戶吧！
-                                                </div>
-                                                <div class="imagebox">
-                                                    <img src="{% static 'assets/img/functionintro/sellingprocess-answer-6.png' %}" alt="建立需求卡">
-                                                </div>
-                                                
-                                            </div>
-                                        </li>
+                                        
                                     </ol>
                                 </div>
             
