改文案，加選單上手刀下載連結

--- a/sa_page/templates/community.html
+++ b/sa_page/templates/community.html
@@ -89,6 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
                     <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">產品熱度</span> <span class="line"></span></a>
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
+                    <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text" target="_blank">手刀下載</span> <span class="line"></span></a>
                 </nav>
 
 
@@ -329,8 +330,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="block-body">
                         <p>SA團隊歷經半年開發，目前已可提供iOS下載體驗，搭配嶄新設計風格，SA首推兩大功能：</p>
-                        <p><strong>1.「社區百科」： 開發銷售好幫手，社區大小資訊即時一手掌握<br>
-                            2.「數位名片」： 創造業務機會無遠弗屆，創新行銷通路廣結善緣</p></strong>
+                        <p><strong>
+                            1.「社區百科」： 開發銷售好幫手，社區大小資訊即時一手掌握<br>
+                            2.「數位名片」： 創造業務機會無遠弗屆，創新行銷通路廣結善緣<br>
+                            3.「買方服務流程」：客戶建檔到推薦帶看，一氣呵成好管理
+                        </strong></p>
     
                     </div>
                     <div class="block-footer">
@@ -370,7 +374,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
                         <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">產品熱度</span> <span class="line"></span></a>
                         <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text">點贊Go!</span> <span class="line"></span></a>
-
+                        <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text">手刀下載</span> <span
+                            class="line"></span></a>
                     </nav>
 
                     <div class="right">
