--- a/sa_page/templates/pd_data.html
+++ b/sa_page/templates/pd_data.html
@@ -83,6 +83,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="/sa/functionintro/" class="nav-link" data-trigger-page-transition><span class="text">SA攻略</span> <span class="line"></span></a>
                 <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">產品熱度</span> <span class="line"></span></a>
                 <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text" target="_blank">點讚GO!</span> <span class="line"></span></a>
+                <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text" target="_blank">手刀下載</span> <span class="line"></span></a>
             </nav>
             <a href="/sa/#" class="hidden-button" data-toggle-trial></a>
         </div>
