--- a/sa_page/templates/voting/solution2.html
+++ b/sa_page/templates/voting/solution2.html
@@ -95,6 +95,7 @@
                             target="_blank">產品熱度</span> <span class="line"></span></a> 
                     <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text"
                             target="_blank">點讚GO!</span> <span class="line"></span></a>
+                            <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text" target="_blank">手刀下載</span> <span class="line"></span></a>
                 </nav>
 
 
@@ -299,7 +300,8 @@
                         <a href="/sa/pd_data/" class="nav-link" data-trigger-page-transition><span class="text">產品熱度</span> <span class="line"></span></a>
                         <a href="/sa/voting/" class="nav-link" data-trigger-page-transition><span class="text">點讚GO!</span> <span
                                 class="line"></span></a>
-
+                         <a href="https://sinyi-superagent-webapp-uscmmvx6lq-de.a.run.app/sa_index.html" target="_blank" class="nav-link" ><span class="text">手刀下載</span> <span
+                                    class="line"></span></a>      
                     </nav>
 
                     <div class="right">
